# rl-vla

./: .gitignore  README.md  ToDo.md  ToDo_Revised.md
LeRobot-Anything-U-Arm/: README.md  howtoplay.md  quick_check.py
LeRobot-Anything-U-Arm/docs/: arx5_inference_debug.md
LeRobot-Anything-U-Arm/src/uarm/: CMakeLists.txt
LeRobot-Anything-U-Arm/src/uarm/scripts/Follower_Arm/ARX/: arx_teleop.py  keyboard_teleop.py  teach_replay.py  test_joint_control.py
LeRobot-Anything-U-Arm/src/uarm/scripts/Uarm_teleop/: servo_changeid.py  servo_reader.py  servo_zero.py
LeRobot-Anything-U-Arm/src/uarm/scripts/data_collection/: INFERENCE_README.md  README.md  __init__.py  arx5_collect_data.py  arx5_policy_inference.py  camera_manager.py  data_recorder.py  dataset_config.py  debug_inference.py  diagnose_inference.py  preprocess_dataset.py  replay_trajectory.py  test_robot_motion.py  validate_inference.py
LeRobot-Anything-U-Arm/src/uarm/scripts/data_collection/docs/: TIMING_ISSUE.md
arx5-sdk/: CMakeLists.txt
consistency_policy/: README.md  __init__.py  analyze_timing.py  config.py  eval_real_mp.py  joint_trajectory_interpolator.py  policy_inference.py  realsense_camera.py  robot_controller_mp.py
consistency_policy/tests/: README.md  TEST_RESULTS.md  __init__.py  test_camera.py  test_controller.py  test_offline_inference.py  test_robot_replay.py
inference/: README.md  __init__.py  camera_manager.py  compare_trajectories.py  config.py  control_node.py  inference_node.py  shared_state.py  trajectory_logger.py
inference/tests/: __init__.py  benchmark.py  test_multiprocess.py  test_offline_inference.py
inference_rtc/: CMakeLists.txt  README.md  run_rtc.sh
inference_rtc/cpp/: cubic_interpolator.hpp  safety_limiter.hpp  servo_main.cpp  test_interpolator.cpp  trajectory_buffer.hpp
inference_rtc/docs/: COMPLETED.md  DEPLOYMENT.md  RTC_ARCHITECTURE.md  TODO.md
inference_rtc/python/: __init__.py  config.py  inference_main.py  policy_runner.py  servo_main.py
inference_rtc/shared/: __init__.py  shm_protocol.hpp  shm_protocol.py
inference_rtc/tests/: __init__.py  test_debug_servo.py  test_e2e.py  test_full_debug.py  test_inference_latency.py  test_integration.py  test_offline_inference.py  test_robot_basic.py  test_robot_replay.py  test_shm_comm.py  test_shm_quick.py  visualize_debug.py
rlft/: .gitignore  REVISIED.md  ToDo.md
rlft/diffusion_policy/diffusion_policy/rlpd/: networks.py
rlft/dsrl/: .gitignore  README.md  __init__.py  dsrl_agent.py  latent_policy.py  macro_rollout_buffer.py  train_latent_offline.py  train_latent_online.py  value_network.py
rlft/dsrl/configs/: stage1_offline.yaml  stage2_online.yaml
rlft/dsrl/tests/: test_awsc_evaluation.py  test_checkpoint_loading.py
rlft/dsrl_offpolicy/: README.md  __init__.py
rlft/dsrl_offpolicy/agents/: __init__.py  dsrl_sac_agent.py
rlft/dsrl_offpolicy/buffers/: __init__.py  macro_replay_buffer.py
rlft/dsrl_offpolicy/configs/: stage1_offline.yaml  stage2_online.yaml
rlft/dsrl_offpolicy/models/: __init__.py  latent_q_network.py
rlft/dsrl_offpolicy/tests/: __init__.py  test_agent.py  test_components.py  test_minimal_training.py
rlft/dsrl_offpolicy/train/: __init__.py  train_stage1_offline.py  train_stage2_online.py
scripts/: build_all.sh  run_inference.sh  setup_can_devices.sh
